--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -5,26 +5,17 @@
 			<fieldset>
 			<!--Radio buttons for artist/business select -->
 	 <label>Are you an Artist or a Business?</label>
-			<div class="form-group">
-				<div class="radio">
-					<label>
-						<input type="radio" name="user" value="Artist" ng-model="user">
-						Artist
-					</label>
-				</div>
-				<div class="radio">
-					<label>
-						<input type="radio" name="user" value="Business" ng-model="user">
-						Business
-					</label>
-				</div>
-			</div>
-
+		<input type="radio" name="user" value="Artist" ng-model="user" ng-click="assignArtist()">Artist
+		<input type="radio" name="user" value="Business" ng-model="user" ng-click="assignBusiness()">Business
 				<!-- Show artist sign up form -->
 				<div ng-show="isShown('Artist')">
 					<div class="form-group">
 						<label for="firstName">First Name</label>
-						<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
+						<input type="text" required id="firstName"
+																			name="firstName"
+																			class="form-control"
+														  data-ng-model="credentials.firstName"
+															  placeholder="First Name">
 					</div>
 
 					<div class="form-group">
