--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -5,8 +5,9 @@
 		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
 				<div class="form-group">
-					<label for="email">Email</label>
-					<input type="text" id="email" name="email" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+					<!-- add in conditional logic for business -->
+					<label for="email">StageName</label>
+					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Stage Name">
 				</div>
 				<div class="form-group">
 					<label for="password">Password</label>
