--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -1,97 +1,82 @@
 <section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Sign up with your email</h3>
+	<h1 class="col-md-12 text-center">Are you an Artist or a Bussiness?</h1>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form name="userForm" data-ng-submit="signup()" class="signin form-horizontal" novalidate autocomplete="off">
 			<!--Radio buttons for artist/business select -->
+			<label for="artist">Artist</label>
+			<input type="radio" id="userType" name="userType" value="artist" data-ng-model="credentials.userType">
+			<label for="business">Business</label>
+			<input type="radio" id="userType" name="userType" value="business" data-ng-model="credentials.userType">
+			<!-- Show artist sign up form -->
+			<div ng-show="credentials.userType == 'artist'">
+				<div class="form-group">
+					<label for="firstName">First Name</label>
+					<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
+				</div>
 
-	<label>Are you an Artist or a Business?</label>
-	<label for="artist">Artist</label>
-	<input type="radio" id="userType" name="credentials.userType" value="artist" data-ng-model="credentials.userType">
+				<div class="form-group">
+					<label for="lastName">Last Name</label>
+					<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
+				</div>
+				<div class="form-group">
+					<label for="stageName">Stage Name</label>
+					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Stage Name">
+				</div>
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
+				</div>
 
-		<label for="business">Business</label>
-		<input type="radio" id="userType" name="userType" value="business" data-ng-model="credentials.userType">
-				<!-- Show artist sign up form -->
-				<div ng-show="credentials.userType == artist">
-					<div class="form-group">
-						<label for="firstName">First Name</label>
-						<input type="text" required id="firstName"
-																			name="firstName"
-																			class="form-control"
-														  data-ng-model="credentials.firstName"
-															  placeholder="First Name">
-					</div>
-
-					<div class="form-group">
-						<label for="lastName">Last Name</label>
-						<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
-					</div>
-					<div class="form-group">
-						<label for="username">Username</label>
-						<input type="text" required id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
-					</div>
-					<div class="form-group">
-						<label for="email">Email</label>
-						<input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
-					</div>
-					<div class="form-group">
-						<label for="stageName">Stage Name</label>
-						<input type="text" id="stageName" name="stageName" class="form-control" data-ng-model="credentials.stageName" placeholder="Stage Name">
-					</div>
-					<div class="form-group">
-						<label for="password">Password</label>
-						<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-					</div>
-					<div class="text-center form-group">
-						<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
-						<a href="/#!/signin" class="show-signup">Sign in</a>
-					</div>
-					<div data-ng-show="error" class="text-center text-danger">
-						<strong data-ng-bind="error"></strong>
-					</div>
-				 </div>
-
-				<!-- Show business sign up form -->
-				 <div ng-show="userType == business">
-					<div class="form-group">
-						<label for="firstName">First Name</label>
-						<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
-					</div>
-					<div class="form-group">
-						<label for="lastName">Last Name</label>
-						<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
-					</div>
-					<div class="form-group">
-						<label for="username">Username</label>
-						<input type="text" required id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
-					</div>
-					<div class="form-group">
-						<label for="email">Email</label>
-						<input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
-					</div>
-					<div class="form-group">
-						<label for="businessName">Business Name</label>
-						<input type="text" id="businessName" name="businessName" class="form-control" data-ng-model="credentials.businessName" placeholder="Business Name">
-					</div>
-					<div class="form-group">
-						<label for="Adress">Address</label>
-						<input type="text" id="address" name="Address" class="form-control" data-ng-model="credentials.address" placeholder="Address">
-					</div>
-					<div class="form-group">
-						<label for="phoneNumber">Phone Number</label>
-						<input type="text" id="phoneNumber" name="phoneNumber" class="form-control" data-ng-model="credentials.phoneNumber" placeholder="Phone Number">
-					</div>
-					<div class="form-group">
-						<label for="password">Password</label>
-						<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-					</div>
-					<div class="text-center form-group">
-						<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
-						<a href="/#!/signin" class="show-signup">Sign in</a>
-					</div>
-					<div data-ng-show="error" class="text-center text-danger">
-						<strong data-ng-bind="error"></strong>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+				</div>
+				<div class="text-center form-group">
+					<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
+					<a href="/#!/signin" class="show-signup">Sign in</a>
+				</div>
+				<div data-ng-show="error" class="text-center text-danger">
+					<strong data-ng-bind="error"></strong>
+				</div>
 			</div>
-		</div>
+
+			<!-- Show business sign up form -->
+			<div ng-show="credentials.userType == 'business'">
+				<div class="form-group">
+					<label for="firstName">First Name</label>
+					<input type="text" required id="firstName" name="firstName" class="form-control" data-ng-model="credentials.firstName" placeholder="First Name">
+				</div>
+				<div class="form-group">
+					<label for="lastName">Last Name</label>
+					<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="credentials.lastName" placeholder="Last Name">
+				</div>
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input type="email" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
+				</div>
+				<div class="form-group">
+					<label for="businessName">Business Name</label>
+					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Business Name">
+				</div>
+				<!-- <div class="form-group">
+				<label for="Adress">Address</label>
+				<input type="text" id="address" name="Address" class="form-control" data-ng-model="credentials.address" placeholder="Address">
+			</div> -->
+			<div class="form-group">
+				<label for="phoneNumber">Phone Number</label>
+				<input type="text" id="phoneNumber" name="phoneNumber" class="form-control" data-ng-model="credentials.phoneNumber" placeholder="Phone Number">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+			</div>
+			<div class="text-center form-group">
+				<button type="submit" class="btn btn-large btn-primary">Sign up</button>&nbsp; or&nbsp;
+				<a href="/#!/signin" class="show-signup">Sign in</a>
+			</div>
+			<div data-ng-show="error" class="text-center text-danger">
+				<strong data-ng-bind="error"></strong>
+			</div>
 		</form>
 	</div>
 </section>
