--- a/public/modules/browse/views/userProfile.client.view.html
+++ b/public/modules/browse/views/userProfile.client.view.html
@@ -3,14 +3,14 @@
 	<div class="sidepanel">
 		<div style="display:inline-block; border-radius:50%;width: 150px; height: 150px; overflow: hidden;margin-top:20px;"><img style="height: 100%;
     align-self: center;" src="https://cdn2.iconfinder.com/data/icons/free-basic-icon-set-2/300/2-128.png"/>
-</div><br><a href="#">More Pictures</a>
+    </div><br><a href="#">More Pictures</a>
 	</div>
-	<div style="float:right;width:85%;">
 
-		<div data-ng-show="authentication.user"><h1 data-ng-bind="artist.stageName"></h1>
-		<span data-ng-model="user.address.city">Location</span>
-		<div align=right>http://website.com</div>
-		</div>
+	<div style="float:right;width:85%;">
+    <h1 data-ng-bind="artist.username"></h1>
+    <h2 data-ng-bind="artist.displayName"></h1>
+		<span data-ng-bind="artist.city"></span>
+		<div align=right>http://website.com</div><!--add website here -->
 		<hr>
 		<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe>
 		<article></article>
