--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -5,10 +5,10 @@
         <a ui-sref="dashboard.profile">Edit Profile</a>
        </li>
        <li>
-         <a href='/#!/browse/'>Overview</a>
+         <a ui-sref="browse">Overview</a>
        </li>
        <li>
-         <a href="#">Events</a>
+         <a ui-sref="dashboard.gigs">Gigs</a>
        </li>
        <li>
          <a href="#">About</a>
@@ -21,12 +21,12 @@
        </li>
      </ul>
    </div>
- </div>
- <div id="page-content-wrapper">
-   <div class="container-fluid">
-     <div class="row">
-       <div class="col-lg-12">
-         <div ui-view></div>
+   <div id="page-content-wrapper">
+     <div class="container-fluid">
+       <div class="row">
+         <div class="col-lg-12">
+           <div ui-view></div>
+         </div>
        </div>
      </div>
    </div>
