--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -1,27 +1,56 @@
 <section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Welecome Back!</h3>
 	<h3 class="col-md-12 text-center">Time to Rock!</h3>
+	<h3 class="col-md-12 text-center">Are you signing in as an artist or business?</h3>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
+
+			<label for="artist">Artist</label>
+			<input type="radio" id="userType" name="userType" value="artist" data-ng-model="credentials.userType">
+			<label for="business">Business</label>
+			<input type="radio" id="userType" name="userType" value="business" data-ng-model="credentials.userType">
+
 			<fieldset>
-				<div class="form-group">
-					<!-- add in conditional logic for business -->
-					<label for="email">StageName</label>
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Stage Name">
+				<div ng-show="credentials.userType == 'artist'">
+					<div class="form-group">
+						<!-- add in conditional logic for business -->
+						<label for="email">StageName</label>
+						<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Stage Name">
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label>
+						<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+					</div>
+					<div class="text-center form-group">
+						<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
+						<a href="/#!/signup">Sign up</a>
+					</div>
+					<div class="forgot-password">
+						<a href="/#!/password/forgot">Forgot your password?</a>
+					</div>
+					<div data-ng-show="error" class="text-center text-danger">
+						<strong data-ng-bind="error"></strong>
+					</div>
 				</div>
-				<div class="form-group">
-					<label for="password">Password</label>
-					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-				</div>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
-					<a href="/#!/signup">Sign up</a>
-				</div>
-				<div class="forgot-password">
-					<a href="/#!/password/forgot">Forgot your password?</a>
-				</div>
-				<div data-ng-show="error" class="text-center text-danger">
-					<strong data-ng-bind="error"></strong>
+				<div ng-show="credentials.userType == 'business'">
+					<div class="form-group">
+						<!-- add in conditional logic for business -->
+						<label for="email">Business Name</label>
+						<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Business Name">
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label>
+						<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+					</div>
+					<div class="text-center form-group">
+						<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
+						<a href="/#!/signup">Sign up</a>
+					</div>
+					<div class="forgot-password">
+						<a href="/#!/password/forgot">Forgot your password?</a>
+					</div>
+					<div data-ng-show="error" class="text-center text-danger">
+						<strong data-ng-bind="error"></strong>
+					</div>
 				</div>
 			</fieldset>
 		</form>
